@@ -903,10 +903,27 @@ $linkcolour_ids: array of prefixed DB keys of the pages linked to,
 	indexed by page_id.
 &$colours: (output) array of CSS classes, indexed by prefixed DB keys
 
-'GetLocalURL': modify local URLs as output into page links
+'GetLocalURL': modify local URLs as output into page links. Note that if you
+	are working with internal urls (non-interwiki) then it may be preferable
+	to work with the GetLocalURL::Internal or GetLocalURL::Article hooks as
+	GetLocalURL can be buggy for internal urls on render if you do not
+	re-implement the horrible hack that Title::getLocalURL uses
+	in your own extension.
 $title: Title object of page
-$url: string value as output (out parameter, can modify)
+&$url: string value as output (out parameter, can modify)
 $query: query options passed to Title::getLocalURL()
+$variant: variant options passed to Title::getLocalURL()
+
+'GetLocalURL::Internal': modify local URLs to internal pages.
+$title: Title object of page
+&$url: string value as output (out parameter, can modify)
+$query: query options passed to Title::getLocalURL()
+$variant: variant options passed to Title::getLocalURL()
+
+'GetLocalURL::Article': modify local URLs specifically pointing to article paths
+	without any fancy queries or variants.
+$title: Title object of page
+&$url: string value as output (out parameter, can modify)
 
 'GetMetadataVersion': modify the image metadata version currently in use. This is
 	used when requesting image metadata from a ForiegnApiRepo. Media handlers
@@ -2055,6 +2072,15 @@ $article: article object watched
 $title: Title object
 $redirect: whether the page is a redirect
 $skin: Skin object
+
+'WebRequestGetPathInfoRequestURI': while extracting path info from REQUEST_URI.
+	Allows an extension to extend the extraction of titles from paths.
+	Implementing hooks should follow the pattern used in core:
+	* Use the `$matches = WebRequest::extractTitle` pattern
+	* Ensure that you test `if ( !$matches ) {` before you try extracting a title
+	  from the path so that you don't override an already found match.
+$path: The request path to extract a title from.
+&$matches: The array to apply matches to.
 
 'WikiExporter::dumpStableQuery': Get the SELECT query for "stable" revisions
 dumps
