@@ -28,6 +28,9 @@ production.
   as with templates.
 * Installer now issues a warning if mod_security is present.
 * (bug 29455) Add support for a filter callback function in jQuery byteLimit plugin.
+* Extensions can now participate in the extraction of titles from url paths
+* Added two new GetLocalURL hooks to better serve extensions working on a limited
+  type of titles.
 
 === Bug fixes in 1.19 ===
 * $wgUploadNavigationUrl should be used for file redlinks if
